--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -2,6 +2,8 @@
 
 ## 1.6. Models of herbicide resistances across SE Austrlia using population-level genomic information, environmental variables, and other herbicide resistances
 
+Add these data from CSIRO (c/o Alex): [csv file](https://urldefense.com/v3/__https://drive.google.com/file/d/1RDxAuoXQZynMORNE2kRP_ZqHkWx1FuW4/view?usp=drive_link__;!!C5rN6bSF!EW1RdWcKYKRux59Bb7iOcZFy6tcDY7A5eX9aNZsdb1sGhy_ACkbt8TvfAgDGqldsbFJIl4y-NOBX5svFGLNcdxOytNbQJto_WFOeesgEtPsMrYp6$)
+
 ```R
 setwd("/data-weedomics-1/Lolium_rigidum_population_and_quantitative_genetics")
 source("src/modelling_and_crossfold_validation.r")
