gs with CSIRO soil data + very promising results

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -115,8 +115,14 @@ for (herbi in vec_names_phenotypes) {
 ![ridge-Glyphosate](../res/genomic_prediction-ridge-Glyphosate.svg)
 ![lasso-Glyphosate](../res/genomic_prediction-lasso-Glyphosate.svg)
 ![elastic-Glyphosate](../res/genomic_prediction-elastic-Glyphosate.svg)
+![bayesa-Glyphosate](../res/genomic_prediction-bayesa-Glyphosate.svg)
+![bayesb-Glyphosate](../res/genomic_prediction-bayesb-Glyphosate.svg)
+![bayesc-Glyphosate](../res/genomic_prediction-bayesc-Glyphosate.svg)
 
 ![ols-Clethodim](../res/genomic_prediction-ols-Clethodim.svg)
 ![ridge-Clethodim](../res/genomic_prediction-ridge-Clethodim.svg)
 ![lasso-Clethodim](../res/genomic_prediction-lasso-Clethodim.svg)
 ![elastic-Clethodim](../res/genomic_prediction-elastic-Clethodim.svg)
+![bayesa-Clethodim](../res/genomic_prediction-bayesa-Clethodim.svg)
+![bayesb-Clethodim](../res/genomic_prediction-bayesb-Clethodim.svg)
+![bayesc-Clethodim](../res/genomic_prediction-bayesc-Clethodim.svg)
