gs with CSIRO soil data + very promising results

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -65,7 +65,7 @@ for (herbi in vec_names_phenotypes) {
     end_time = Sys.time()
     print(end_time - start_time)
 
-    vec_models = c("ols", "lasso", "ridge", "elastic", "basyesa", "basyesb", "basyesc")
+    vec_models = c("ols", "lasso", "ridge", "elastic", "bayesa", "bayesb", "bayesc")
     col_bars = rgb(0.1, 0.1, 0.1, alpha=0.5)
     col_points = rgb(0.9, 0.2, 0.1, alpha=0.5)
     col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
@@ -126,3 +126,19 @@ for (herbi in vec_names_phenotypes) {
 ![bayesa-Clethodim](../res/genomic_prediction-bayesa-Clethodim.svg)
 ![bayesb-Clethodim](../res/genomic_prediction-bayesb-Clethodim.svg)
 ![bayesc-Clethodim](../res/genomic_prediction-bayesc-Clethodim.svg)
+
+![ols-Tri_Allate](../res/genomic_prediction-ols-Tri_Allate.svg)
+![ridge-Tri_Allate](../res/genomic_prediction-ridge-Tri_Allate.svg)
+![lasso-Tri_Allate](../res/genomic_prediction-lasso-Tri_Allate.svg)
+![elastic-Tri_Allate](../res/genomic_prediction-elastic-Tri_Allate.svg)
+![bayesa-Tri_Allate](../res/genomic_prediction-bayesa-Tri_Allate.svg)
+![bayesb-Tri_Allate](../res/genomic_prediction-bayesb-Tri_Allate.svg)
+![bayesc-Tri_Allate](../res/genomic_prediction-bayesc-Tri_Allate.svg)
+
+![ols-Paraquat](../res/genomic_prediction-ols-Paraquat.svg)
+![ridge-Paraquat](../res/genomic_prediction-ridge-Paraquat.svg)
+![lasso-Paraquat](../res/genomic_prediction-lasso-Paraquat.svg)
+![elastic-Paraquat](../res/genomic_prediction-elastic-Paraquat.svg)
+![bayesa-Paraquat](../res/genomic_prediction-bayesa-Paraquat.svg)
+![bayesb-Paraquat](../res/genomic_prediction-bayesb-Paraquat.svg)
+![bayesc-Paraquat](../res/genomic_prediction-bayesc-Paraquat.svg)
