gs with CSIRO soil data + very promising results

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -31,8 +31,6 @@ for (herbi in vec_names_phenotypes) {
     df_phenotype = LOAD_PHENOTYPES(fname_phenotype=fname_phenotype, batch="all", phenotype_names=herbi)
     df_phenotype = merge(df_phenotype, df_covariates_csiro_soil_data, by="X.Population")
     df = MERGE_PHENOTYPE_WITH_GENOTYPE_AND_ENVIRONMENTAL_DATA(df_phenotype=df_phenotype, df_genotype=df_genotype, raster_layers=raster_layers)
-    n = nrow(df)
-    p = ncol(df)
     vec_names_csiro_soil_data = colnames(df_covariates_csiro_soil_data)
     vec_names_csiro_soil_data = vec_names_csiro_soil_data[!(vec_names_csiro_soil_data %in% vec_names_ids)]
     vec_names_phenotypes = colnames(df_phenotype)
@@ -46,9 +44,9 @@ for (herbi in vec_names_phenotypes) {
     G = df[, colnames(df) %in% vec_names_loci]
     S = df[, colnames(df) %in% vec_names_csiro_soil_data]
 
-    if (var(y, na.rm=TRUE) == 0) {
+    if (var(y, na.rm=TRUE) < 0) {
         print("No variance in the phenotype data.")
-        quit()
+        next
     }
     vec_var_loci = apply(G, MARGIN=2, FUN=var, na.rm=TRUE)
     G = G[, vec_var_loci != 0]
@@ -59,54 +57,57 @@ for (herbi in vec_names_phenotypes) {
     G = scale(G, scale=TRUE, center=TRUE)
     S = scale(S, scale=TRUE, center=TRUE)
 
-    options(digits.secs=7)
-    start_time = Sys.time()
-    kfold = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10)
-    end_time = Sys.time()
-    print(end_time - start_time)
+    for (explanatory_variables in c("G", "E_and_G")) {
+        # explanatory_variables = "G"
+        options(digits.secs=7)
+        start_time = Sys.time()
+        eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10)")))
+        end_time = Sys.time()
+        print(end_time - start_time)
 
-    vec_models = c("ols", "lasso", "ridge", "elastic", "bayesa", "bayesb", "bayesc")
-    col_bars = rgb(0.1, 0.1, 0.1, alpha=0.5)
-    col_points = rgb(0.9, 0.2, 0.1, alpha=0.5)
-    col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
-    for (model in vec_models) {
-        # model = "ols"
-        y_idx = eval(parse(text=paste0("unlist(lapply(kfold$", model, ", FUN=function(x){lapply(x, FUN=function(y){y$idx_test})}))")))
-        y_true = eval(parse(text=paste0("unlist(lapply(kfold$", model, ", FUN=function(x){lapply(x, FUN=function(y){y$y_test})}))")))
-        y_pred = eval(parse(text=paste0("unlist(lapply(kfold$", model, ", FUN=function(x){lapply(x, FUN=function(y){y$y_hat})}))")))
+        vec_models = c("ols", "lasso", "ridge", "elastic", "bayesa", "bayesb", "bayesc")
+        col_bars = rgb(0.1, 0.1, 0.1, alpha=0.5)
+        col_points = rgb(0.9, 0.2, 0.1, alpha=0.5)
+        col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
+        for (model in vec_models) {
+            # model = "ols"
+            y_idx = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$idx_test}})}))"))))
+            y_true = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_test}})}))"))))
+            y_pred = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_hat}})}))"))))
 
-        y_true = (y_true * attr(y, "scaled:scale")) + attr(y, "scaled:center")
-        y_pred = (y_pred * attr(y, "scaled:scale")) + attr(y, "scaled:center")
+            y_true = (y_true * attr(y, "scaled:scale")) + attr(y, "scaled:center")
+            y_pred = (y_pred * attr(y, "scaled:scale")) + attr(y, "scaled:center")
 
-        df_y = data.frame(y_idx, y_true, y_pred)
+            df_y = data.frame(y_idx, y_true, y_pred)
 
-        y_true = aggregate(y_true ~ y_idx, data=df_y, FUN=mean)
-        y_pred = aggregate(y_pred ~ y_idx, data=df_y, FUN=mean)
-        y_pred_sd = aggregate(y_pred ~ y_idx, data=df_y, FUN=sd)
-        df_y = merge(y_true, y_pred, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean")
-        df_y = merge(df_y, y_pred_sd, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean", "y_pred_sd")
+            y_true = aggregate(y_true ~ y_idx, data=df_y, FUN=mean)
+            y_pred = aggregate(y_pred ~ y_idx, data=df_y, FUN=mean)
+            y_pred_sd = aggregate(y_pred ~ y_idx, data=df_y, FUN=sd)
+            df_y = merge(y_true, y_pred, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean")
+            df_y = merge(df_y, y_pred_sd, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean", "y_pred_sd")
 
-        corr = cor(df_y$y_true, df_y$y_pred_mean)
-        mae = mean(abs(df_y$y_true - df_y$y_pred_mean))
-        rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
-        r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
+            corr = cor(df_y$y_true, df_y$y_pred_mean)
+            mae = mean(abs(df_y$y_true - df_y$y_pred_mean))
+            rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
+            r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
 
-        svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"))
-        plot(x=0, y=0, xlim=range(df_y$y_true), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
-            xlab="Observed (survival rate, %)", 
-            ylab="Predicted (survival rate, %)", 
-            main=paste0(herbi, " Resistance\n(", model, ")"))
-        grid()
-        arrows(x0=df_y$y_true, x1=df_y$y_true, y0=df_y$y_pred_mean-df_y$y_pred_sd, y1=df_y$y_pred_mean+df_y$y_pred_sd, code=3, col=col_bars, angle=90, length=0.0, lty=1)
-        points(x=df_y$y_true, y=df_y$y_pred_mean, pch=19, col=col_points)
-        abline(lm(y_pred_mean ~ y_true, data=df_y), lty=2, col=col_line)
-        legend("bottomright", legend=c(
-            paste0("Pearson's correlation = ", round(100*corr, 2), "%"),
-            paste0("Mean absolute error = ", round(mae, 2)),
-            paste0("Root mean squared error = ", round(rmse, 2)),
-            paste0("Coefficient of determination = ", round(100*r2, 2), "%")
-        ), bty="n")
-        dev.off()
+            svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"))
+            plot(x=0, y=0, xlim=range(df_y$y_true), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
+                xlab="Observed (survival rate, %)", 
+                ylab="Predicted (survival rate, %)", 
+                main=paste0(herbi, " Resistance\n(", model, "; y~", explanatory_variables, ")"))
+            grid()
+            arrows(x0=df_y$y_true, x1=df_y$y_true, y0=df_y$y_pred_mean-df_y$y_pred_sd, y1=df_y$y_pred_mean+df_y$y_pred_sd, code=3, col=col_bars, angle=90, length=0.0, lty=1)
+            points(x=df_y$y_true, y=df_y$y_pred_mean, pch=19, col=col_points)
+            abline(lm(y_pred_mean ~ y_true, data=df_y), lty=2, col=col_line)
+            legend("bottomright", legend=c(
+                paste0("Pearson's correlation = ", round(100*corr, 2), "%"),
+                paste0("Mean absolute error = ", round(mae, 2)),
+                paste0("Root mean squared error = ", round(rmse, 2)),
+                paste0("Coefficient of determination = ", round(100*r2, 2), "%")
+            ), bty="n")
+            dev.off()
+        }
     }
 }
 ```
@@ -127,14 +128,6 @@ for (herbi in vec_names_phenotypes) {
 ![bayesb-Clethodim](../res/genomic_prediction-bayesb-Clethodim.svg)
 ![bayesc-Clethodim](../res/genomic_prediction-bayesc-Clethodim.svg)
 
-![ols-Tri_Allate](../res/genomic_prediction-ols-Tri_Allate.svg)
-![ridge-Tri_Allate](../res/genomic_prediction-ridge-Tri_Allate.svg)
-![lasso-Tri_Allate](../res/genomic_prediction-lasso-Tri_Allate.svg)
-![elastic-Tri_Allate](../res/genomic_prediction-elastic-Tri_Allate.svg)
-![bayesa-Tri_Allate](../res/genomic_prediction-bayesa-Tri_Allate.svg)
-![bayesb-Tri_Allate](../res/genomic_prediction-bayesb-Tri_Allate.svg)
-![bayesc-Tri_Allate](../res/genomic_prediction-bayesc-Tri_Allate.svg)
-
 ![ols-Paraquat](../res/genomic_prediction-ols-Paraquat.svg)
 ![ridge-Paraquat](../res/genomic_prediction-ridge-Paraquat.svg)
 ![lasso-Paraquat](../res/genomic_prediction-lasso-Paraquat.svg)
@@ -142,3 +135,19 @@ for (herbi in vec_names_phenotypes) {
 ![bayesa-Paraquat](../res/genomic_prediction-bayesa-Paraquat.svg)
 ![bayesb-Paraquat](../res/genomic_prediction-bayesb-Paraquat.svg)
 ![bayesc-Paraquat](../res/genomic_prediction-bayesc-Paraquat.svg)
+
+![ols-Atrazine](../res/genomic_prediction-ols-Atrazine.svg)
+![ridge-Atrazine](../res/genomic_prediction-ridge-Atrazine.svg)
+![lasso-Atrazine](../res/genomic_prediction-lasso-Atrazine.svg)
+![elastic-Atrazine](../res/genomic_prediction-elastic-Atrazine.svg)
+![bayesa-Atrazine](../res/genomic_prediction-bayesa-Atrazine.svg)
+![bayesb-Atrazine](../res/genomic_prediction-bayesb-Atrazine.svg)
+![bayesc-Atrazine](../res/genomic_prediction-bayesc-Atrazine.svg)
+
+![ols-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-ols-Prosulfocarb_and_S_metolachlor.svg)
+![ridge-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-ridge-Prosulfocarb_and_S_metolachlor.svg)
+![lasso-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-lasso-Prosulfocarb_and_S_metolachlor.svg)
+![elastic-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-elastic-Prosulfocarb_and_S_metolachlor.svg)
+![bayesa-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-bayesa-Prosulfocarb_and_S_metolachlor.svg)
+![bayesb-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-bayesb-Prosulfocarb_and_S_metolachlor.svg)
+![bayesc-Prosulfocarb_and_S_metolachlor](../res/genomic_prediction-bayesc-Prosulfocarb_and_S_metolachlor.svg)
