gs with CSIRO soil data + very promising results

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -61,7 +61,11 @@ for (herbi in vec_names_phenotypes) {
         # explanatory_variables = "G"
         options(digits.secs=7)
         start_time = Sys.time()
-        eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10)")))
+        if (explanatory_variables == "G") {
+            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=G, y=y, r=10, k=10)")))
+        } else if (explanatory_variables == "E_and_G") {
+            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10)")))
+        }
         end_time = Sys.time()
         print(end_time - start_time)
 
