gs with CSIRO soil data + very promising results

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -68,13 +68,19 @@ for (herbi in vec_names_phenotypes) {
         }
         end_time = Sys.time()
         print(end_time - start_time)
+    }
 
-        vec_models = c("ols", "lasso", "ridge", "elastic", "bayesa", "bayesb", "bayesc")
-        col_bars = rgb(0.1, 0.1, 0.1, alpha=0.5)
-        col_points = rgb(0.9, 0.2, 0.1, alpha=0.5)
-        col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
-        for (model in vec_models) {
-            # model = "ols"
+    ### Plot per model which contains predictions of using genomic data only, and genomic data with CSIRO soil data
+    vec_models = c("ols", "lasso", "ridge", "elastic", "bayesa", "bayesb", "bayesc")
+    col_bars = rgb(0.1, 0.1, 0.1, alpha=0.5)
+    col_points = rgb(0.9, 0.2, 0.1, alpha=0.5)
+    col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
+    for (model in vec_models) {
+        # model = "ols"
+        svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"))
+        layout(matrix(1:2, nrow=1))
+        for (explanatory_variables in c("G", "E_and_G")) {
+            # explanatory_variables = "G"
             y_idx = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$idx_test}})}))"))))
             y_true = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_test}})}))"))))
             y_pred = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_hat}})}))"))))
@@ -95,7 +101,6 @@ for (herbi in vec_names_phenotypes) {
             rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
             r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
 
-            svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"))
             plot(x=0, y=0, xlim=range(df_y$y_true), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
                 xlab="Observed (survival rate, %)", 
                 ylab="Predicted (survival rate, %)", 
@@ -110,8 +115,8 @@ for (herbi in vec_names_phenotypes) {
                 paste0("Root mean squared error = ", round(rmse, 2)),
                 paste0("Coefficient of determination = ", round(100*r2, 2), "%")
             ), bty="n")
-            dev.off()
         }
+        dev.off()
     }
 }
 ```
