--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -59,12 +59,16 @@ for (herbi in vec_names_herbicides) {
     G = scale(G, scale=TRUE, center=TRUE)
     S = scale(S, scale=TRUE, center=TRUE)
 
-    for (explanatory_variables in c("G", "E_and_G")) {
+    vec_explanatory_variables = c("E", "G", "E_and_G")
+
+    for (explanatory_variables in vec_explanatory_variables) {
         # explanatory_variables = "G"
         print(explanatory_variables)
         options(digits.secs=7)
         start_time = Sys.time()
-        if (explanatory_variables == "G") {
+        if (explanatory_variables == "E") {
+            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=S, y=y, r=10, k=10)")))
+        } else if (explanatory_variables == "G") {
             eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=G, y=y, r=10, k=10)")))
         } else if (explanatory_variables == "E_and_G") {
             eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10)")))
@@ -80,10 +84,10 @@ for (herbi in vec_names_herbicides) {
     col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
     for (model in vec_models) {
         # model = "ols"
-        svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"), width=14, height=7)
-        layout(matrix(1:2, nrow=1))
-        for (explanatory_variables in c("G", "E_and_G")) {
-            # explanatory_variables = "G"
+        svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"), width=21, height=7)
+        layout(matrix(1:3, nrow=1))
+        for (explanatory_variables in vec_explanatory_variables) {
+            # explanatory_variables = "E"
             y_idx = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$idx_test}})}))"))))
             y_true = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_test}})}))"))))
             y_pred = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_hat}})}))"))))
