testing logistic regression at 20% resistance threshold + will need to add unit tests for Bayesian and logistic models

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -14,8 +14,7 @@ dname_climate_grid_data = "res/bom_grid_data_1991_to_2020"
 dname_soil_grid_data = "res/fao_soil_data_version1.2"
 fname_csiro_soil_data = "res/CSIRO_AusSoil_complete.csv"
 
-df_genotype = LOAD_GENOTYPES(fname_genotype=fname_genotype,
-                                maf=0.01)
+df_genotype = LOAD_GENOTYPES(fname_genotype=fname_genotype, maf=0.01)
 raster_layers = LOAD_ENVIRONMENTAL_DATA(dname_climate_grid_data=dname_climate_grid_data,
                                 dname_soil_grid_data=dname_soil_grid_data,
                                 extension_name="asc")
@@ -25,6 +24,10 @@ colnames(df_covariates_csiro_soil_data)[grepl("Accession", colnames(df_covariate
 vec_names_ids = c("X.Population", "Batch", "Pool_size", "Latitude", "Longitude", "long", "lat")
 vec_names_herbicides = colnames(read.csv(fname_phenotype))
 vec_names_herbicides = vec_names_herbicides[!(vec_names_herbicides %in% vec_names_ids)]
+
+vec_models = c("ols", "ridge", "lasso", "elastic", "bayesa", "bayesb", "bayesc", "logistic_ridge", "logistic_lasso", "logistic_elastic")
+vec_explanatory_variables = c("E", "G", "E_and_G")
+logistic_y_bin_threshold = 0.2 ### 20% resistance
 
 for (herbi in vec_names_herbicides) {
     # herbi = vec_names_herbicides[2]
@@ -59,69 +62,89 @@ for (herbi in vec_names_herbicides) {
     G = scale(G, scale=TRUE, center=TRUE)
     S = scale(S, scale=TRUE, center=TRUE)
 
-    vec_explanatory_variables = c("E", "G", "E_and_G")
-
     for (explanatory_variables in vec_explanatory_variables) {
-        # explanatory_variables = "G"
+        # explanatory_variables = "E"
         print(explanatory_variables)
         options(digits.secs=7)
         start_time = Sys.time()
         if (explanatory_variables == "E") {
-            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=S, y=y, r=10, k=10)")))
+            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=S, y=y, r=10, k=10, vec_models=vec_models, logistic_y_bin_threshold=logistic_y_bin_threshold)")))
         } else if (explanatory_variables == "G") {
-            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=G, y=y, r=10, k=10)")))
+            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=G, y=y, r=10, k=10, vec_models=vec_models, logistic_y_bin_threshold=logistic_y_bin_threshold)")))
         } else if (explanatory_variables == "E_and_G") {
-            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10)")))
+            eval(parse(text=paste0("kfold_", explanatory_variables, " = KFOLD_CV(x=cbind(S, G), y=y, r=10, k=10, vec_models=vec_models, logistic_y_bin_threshold=logistic_y_bin_threshold)")))
         }
         end_time = Sys.time()
         print(end_time - start_time)
     }
 
     ### Plot per model which contains predictions of using genomic data only, and genomic data with CSIRO soil data
-    vec_models = c("ols", "lasso", "ridge", "elastic", "bayesa", "bayesb", "bayesc")
     col_bars = rgb(0.1, 0.1, 0.1, alpha=0.5)
     col_points = rgb(0.9, 0.2, 0.1, alpha=0.5)
     col_line = rgb(0.9, 0.2, 0.1, alpha=0.5)
     for (model in vec_models) {
         # model = "ols"
+        # model = "logistic_lasso"
         svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"), width=15.75, height=5.25)
         layout(matrix(1:3, nrow=1))
         for (explanatory_variables in vec_explanatory_variables) {
             # explanatory_variables = "E"
+            ### Extract expected and predicted response variable
             y_idx = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$idx_test}})}))"))))
             y_true = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_test}})}))"))))
             y_pred = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$y_hat}})}))"))))
-
-            y_true = (y_true * attr(y, "scaled:scale")) + attr(y, "scaled:center")
-            y_pred = (y_pred * attr(y, "scaled:scale")) + attr(y, "scaled:center")
-
-            df_y = data.frame(y_idx, y_true, y_pred)
-
-            y_true = aggregate(y_true ~ y_idx, data=df_y, FUN=mean)
-            y_pred = aggregate(y_pred ~ y_idx, data=df_y, FUN=mean)
-            y_pred_sd = aggregate(y_pred ~ y_idx, data=df_y, FUN=sd)
-            df_y = merge(y_true, y_pred, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean")
-            df_y = merge(df_y, y_pred_sd, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean", "y_pred_sd")
-
-            corr = cor(df_y$y_true, df_y$y_pred_mean)
-            mae = mean(abs(df_y$y_true - df_y$y_pred_mean))
-            rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
-            r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
-
-            plot(x=0, y=0, xlim=range(df_y$y_true), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
-                xlab="Observed (survival rate, %)", 
-                ylab="Predicted (survival rate, %)", 
-                main=paste0(herbi, " Resistance\n(", model, "; y~", explanatory_variables, ")"))
-            grid()
-            arrows(x0=df_y$y_true, x1=df_y$y_true, y0=df_y$y_pred_mean-df_y$y_pred_sd, y1=df_y$y_pred_mean+df_y$y_pred_sd, code=3, col=col_bars, angle=90, length=0.0, lty=1)
-            points(x=df_y$y_true, y=df_y$y_pred_mean, pch=19, col=col_points)
-            abline(lm(y_pred_mean ~ y_true, data=df_y), lty=2, col=col_line)
-            legend("bottomright", legend=c(
-                paste0("Pearson's correlation = ", round(100*corr, 2), "%"),
-                paste0("Mean absolute error = ", round(mae, 2)),
-                paste0("Root mean squared error = ", round(rmse, 2)),
-                paste0("Coefficient of determination = ", round(100*r2, 2), "%")
-            ), bty="n")
+            if (grepl("logistic", model) == FALSE) {
+                y_true = (y_true * attr(y, "scaled:scale")) + attr(y, "scaled:center")
+                y_pred = (y_pred * attr(y, "scaled:scale")) + attr(y, "scaled:center")
+            } else {
+                ### Predicted binary response
+                y_hat = y_pred 
+                ### Linear predictors
+                l_hat = suppressWarnings(eval(parse(text=paste0("unlist(lapply(kfold_", explanatory_variables, "$", model, ", FUN=function(x){lapply(x, FUN=function(y){if(!is.na(y)){y$l_hat}})}))"))))
+            }
+            ### Calculate prediction accuracy metrics
+            if (grepl("logistic", model) == FALSE) {
+                df_y = data.frame(y_idx, y_true, y_pred)
+                y_true = aggregate(y_true ~ y_idx, data=df_y, FUN=mean)
+                y_pred = aggregate(y_pred ~ y_idx, data=df_y, FUN=mean)
+                y_pred_sd = aggregate(y_pred ~ y_idx, data=df_y, FUN=sd)
+                df_y = merge(y_true, y_pred, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean")
+                df_y = merge(df_y, y_pred_sd, by="y_idx"); colnames(df_y) = c("y_idx", "y_true", "y_pred_mean", "y_pred_sd")
+                corr = cor(df_y$y_true, df_y$y_pred_mean)
+                mae = mean(abs(df_y$y_true - df_y$y_pred_mean))
+                rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
+                r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
+            } else {
+                logistic_accuracy = mean(y_true == y_pred)
+            }
+            ### Plot
+            if (grepl("logistic", model) == FALSE) {
+                plot(x=0, y=0, xlim=range(df_y$y_true), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
+                    xlab="Observed (survival rate, %)", 
+                    ylab="Predicted (survival rate, %)", 
+                    main=paste0(herbi, " Resistance\n(", model, "; y~", explanatory_variables, ")"))
+                grid()
+                arrows(x0=df_y$y_true, x1=df_y$y_true, y0=df_y$y_pred_mean-df_y$y_pred_sd, y1=df_y$y_pred_mean+df_y$y_pred_sd, code=3, col=col_bars, angle=90, length=0.0, lty=1)
+                points(x=df_y$y_true, y=df_y$y_pred_mean, pch=19, col=col_points)
+                abline(lm(y_pred_mean ~ y_true, data=df_y), lty=2, col=col_line)
+                legend("bottomright", legend=c(
+                    paste0("Pearson's correlation = ", round(100*corr, 2), "%"),
+                    paste0("Mean absolute error = ", round(mae, 2)),
+                    paste0("Root mean squared error = ", round(rmse, 2)),
+                    paste0("Coefficient of determination = ", round(100*r2, 2), "%")
+                ), bty="n")
+            } else {
+                plot(x=range(l_hat), y=c(0,1), type="n", 
+                     xlab="Logit Predictor",
+                     ylab="Predicted Survival", 
+                    main=paste0(herbi, " Resistance\n(", model, "; Bin(y; ", round(logistic_y_bin_threshold, 2), ")~", explanatory_variables, ")"))
+                points(x=l_hat, y=y_hat, col=col_points)
+                mod_logit = glm(y_hat ~ l_hat, family=binomial(link="logit"))
+                curve(predict(mod_logit, data.frame(l_hat=x),type='resp'), add=TRUE, lty=2, col=col_line)
+                legend("topleft", 
+                       legend=paste0("Prediction accuracy (concordance) = ", round(100*logistic_accuracy, 2), "%"), 
+                       bty="n")
+            }
         }
         dev.off()
     }
