testing logistic regression at 20% resistance threshold + will need to add unit tests for Bayesian and logistic models

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -30,7 +30,7 @@ vec_explanatory_variables = c("E", "G", "E_and_G")
 logistic_y_bin_threshold = 0.2 ### 20% resistance
 
 for (herbi in vec_names_herbicides) {
-    # herbi = vec_names_herbicides[2]
+    # herbi = vec_names_herbicides[1]
     print("########################")
     print(herbi)
     df_phenotype = LOAD_PHENOTYPES(fname_phenotype=fname_phenotype, batch="all", phenotype_names=herbi)
@@ -86,7 +86,7 @@ for (herbi in vec_names_herbicides) {
         # model = "ols"
         # model = "logistic_lasso"
         svg(paste0("res/genomic_prediction-", model, "-", herbi, ".svg"), width=15.75, height=5.25)
-        layout(matrix(1:3, nrow=1))
+        layout(matrix(1:length(vec_explanatory_variables), nrow=1))
         for (explanatory_variables in vec_explanatory_variables) {
             # explanatory_variables = "E"
             ### Extract expected and predicted response variable
@@ -115,11 +115,18 @@ for (herbi in vec_names_herbicides) {
                 rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
                 r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
             } else {
-                logistic_accuracy = mean(y_true == y_pred)
+                vec_concordance = c()
+                for (i in unique(y_idx)) {
+                    # i = 1
+                    idx = which(y_idx == i)
+                    vec_concordance = c(vec_concordance, mean(y_true[idx] == y_pred[idx]))
+                }
+                logistic_accuracy = mean(vec_concordance)
+                logistic_accuracy_sd = sd (vec_concordance)
             }
             ### Plot
             if (grepl("logistic", model) == FALSE) {
-                plot(x=0, y=0, xlim=range(df_y$y_true), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
+                plot(x=0, y=0, xlim=range(df_y$y_true, na.rm=TRUE), ylim=range(c(df_y$y_pred_mean-df_y$y_pred_sd, df_y$y_pred_mean+df_y$y_pred_sd)), type="n", 
                     xlab="Observed (survival rate, %)", 
                     ylab="Predicted (survival rate, %)", 
                     main=paste0(herbi, " Resistance\n(", model, "; y~", explanatory_variables, ")"))
@@ -138,11 +145,12 @@ for (herbi in vec_names_herbicides) {
                      xlab="Logit Predictor",
                      ylab="Predicted Survival", 
                     main=paste0(herbi, " Resistance\n(", model, "; Bin(y; ", round(logistic_y_bin_threshold, 2), ")~", explanatory_variables, ")"))
-                points(x=l_hat, y=y_hat, col=col_points)
+                points(x=l_hat, y=y_true, col=col_points)
                 mod_logit = glm(y_hat ~ l_hat, family=binomial(link="logit"))
                 curve(predict(mod_logit, data.frame(l_hat=x),type='resp'), add=TRUE, lty=2, col=col_line)
                 legend("topleft", 
-                       legend=paste0("Prediction accuracy (concordance) = ", round(100*logistic_accuracy, 2), "%"), 
+                       legend=c(paste0("Concordance = ", round(100*logistic_accuracy, 2), "%"), 
+                                paste0("(±", round(logistic_accuracy_sd*100),"%)")), 
                        bty="n")
             }
         }
@@ -198,3 +206,6 @@ for (herbi in vec_names_herbicides) {
 ![bayesa-Tri_Allate](../res/genomic_prediction-bayesa-Tri_Allate.svg)
 ![bayesb-Tri_Allate](../res/genomic_prediction-bayesb-Tri_Allate.svg)
 ![bayesc-Tri_Allate](../res/genomic_prediction-bayesc-Tri_Allate.svg)
+![logistic_ridge-Tri_Allate](../res/genomic_prediction-logistic_ridge-Tri_Allate.svg)
+![logistic_lasso-Tri_Allate](../res/genomic_prediction-logistic_lasso-Tri_Allate.svg)
+![logistic_elastic-Tri_Allate](../res/genomic_prediction-logistic_elastic-Tri_Allate.svg)
