testing logistic regression at 20% resistance threshold + will need to add unit tests for Bayesian and logistic models

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -141,7 +141,7 @@ for (herbi in vec_names_herbicides) {
                     paste0("Coefficient of determination = ", round(100*r2, 2), "%")
                 ), bty="n")
             } else {
-                plot(x=range(l_hat)+c(-.Machine$double.eps, .Machine$double.eps), y=c(0,1), type="n", 
+                plot(x=range(l_hat, na.rm=TRUE)+c(-.Machine$double.eps, .Machine$double.eps), y=c(0,1), type="n", 
                      xlab="Logit Predictor",
                      ylab="Predicted Survival", 
                     main=paste0(herbi, " Resistance\n(", model, "; Bin(y; ", round(logistic_y_bin_threshold, 2), ")~", explanatory_variables, ")"))
