reporting cojnfusion matrix metrics for logistic models

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -30,7 +30,7 @@ vec_explanatory_variables = c("E", "G", "E_and_G")
 logistic_y_bin_threshold = 0.2 ### 20% resistance
 
 for (herbi in vec_names_herbicides) {
-    # herbi = vec_names_herbicides[1]
+    # herbi = vec_names_herbicides[9]
     print("########################")
     print(herbi)
     df_phenotype = LOAD_PHENOTYPES(fname_phenotype=fname_phenotype, batch="all", phenotype_names=herbi)
@@ -115,14 +115,15 @@ for (herbi in vec_names_herbicides) {
                 rmse = sqrt(mean((df_y$y_true - df_y$y_pred_mean)^2))
                 r2 = 1.00 - (sum((df_y$y_true - df_y$y_pred_mean)^2) / sum((df_y$y_true - mean(df_y$y_true))^2))
             } else {
-                vec_concordance = c()
-                for (i in unique(y_idx)) {
-                    # i = 1
-                    idx = which(y_idx == i)
-                    vec_concordance = c(vec_concordance, mean(y_true[idx] == y_pred[idx]))
-                }
-                logistic_accuracy = mean(vec_concordance)
-                logistic_accuracy_sd = sd (vec_concordance)
+                idx_true_positive = y_true == 1.00
+                idx_true_negative = y_true == 0.00
+                idx_pred_positive = y_pred == 1.00
+                idx_pred_negative = y_pred == 0.00
+                true_positive_rate_power = mean(y_true[idx_true_positive] == y_pred[idx_true_positive])
+                true_negative_rate_selectivity = mean(y_true[idx_true_negative] == y_pred[idx_true_negative])
+                false_positive_rate_fallout = sum(y_pred[idx_pred_positive] != y_pred[idx_pred_positive]) / sum(idx_true_negative)
+                false_negative_rate_missrate = sum(y_pred[idx_pred_negative] != y_pred[idx_pred_negative]) / sum(idx_true_positive)
+                concordance = mean(y_true == y_pred)
             }
             ### Plot
             if (grepl("logistic", model) == FALSE) {
@@ -141,6 +142,10 @@ for (herbi in vec_names_herbicides) {
                     paste0("Coefficient of determination = ", round(100*r2, 2), "%")
                 ), bty="n")
             } else {
+                if (is.null(y_hat)) {
+                    y_hat = 0.0
+                    l_hat = 0.0
+                }
                 plot(x=range(l_hat, na.rm=TRUE)+c(-.Machine$double.eps, .Machine$double.eps), y=c(0,1), type="n", 
                      xlab="Logit Predictor",
                      ylab="Predicted Survival", 
@@ -148,9 +153,18 @@ for (herbi in vec_names_herbicides) {
                 points(x=l_hat, y=y_true, col=col_points)
                 mod_logit = glm(y_hat ~ l_hat, family=binomial(link="logit"))
                 curve(predict(mod_logit, data.frame(l_hat=x),type='resp'), add=TRUE, lty=2, col=col_line)
-                legend("topleft", 
-                       legend=c(paste0("Concordance = ", round(100*logistic_accuracy, 2), "%"), 
-                                paste0("(±", round(logistic_accuracy_sd*100),"%)")), 
+                legend("left", 
+                       legend=paste0(c("True positive rate = ",
+                                       "True negative rate = ",
+                                       "False positive rate = ",
+                                       "False negative rate = ",
+                                       "Concordance = "), 
+                                     round(c(true_positive_rate_power,
+                                             true_negative_rate_selectivity,
+                                             false_positive_rate_fallout,
+                                             false_negative_rate_missrate,
+                                             concordance)*100), 
+                                    "%"), 
                        bty="n")
             }
         }
